<resources>
    <string name="app_name">AnaTamuraBiscoitosCaseiros</string>
    <string name="email">e-mail</string>
    <string name="password">senha</string>
    <string name="signin_google">entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="button_entrar">Entrar</string>
    <string name="title_register">Cadastrar</string>
    <string name="edit_name">Nome Completo</string>
    <string name="edit_email">E-mail</string>
    <string name="edit_password">Senha</string>
    <string name="text_button_register">Cadastrar-Se</string>
    <string name="edit_celPhone">Celular</string>
    <string name="edit_verifyPassword">Confirmação de Senha</string>
    <string name="edit_dateBirth">Data de Nascimento</string>
    <string name="register_order">Fazer Pedido</string>
    <string name="contact_us">Contatos</string>
    <string name="textView_loginOrRegister">Faça Login ou Cadastre-se</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">Confirmar</string>
    <string name="textView_contact">Contatos</string>
    <string name="add">Add</string>
    <string name="minus">-</string>
    <string name="more">+</string>
    <string name="form_payment">Formulário de Registro de Compra</string>
    <string name="credit_card">Cartão de Crédito</string>
    <string name="pix">Pix</string>
    <string name="money">Dinheiro</string>
    <string name="order">Order:</string>
    <string name="editText_address">Endereço</string>
    <string name="complement">Complemento</string>
    <string name="successful">Registro Efetuado com Sucesso</string>
    <string name="cart">Carrinho:</string>
    <string name="addMany">Adicionar algo mais</string>
    <string name="goToRegisterOrder">Registrar Compra</string>
    <string name="contactUs">Entre em contato conosco para definir a data e hora de entrega</string>
    <string name="one">1</string>
    <string name="_return">RETORNAR</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="instagram">INSTAGRAM</string>
</resources>