<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/form_payment"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/container_radio_group"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/button_creditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card" />

        <RadioButton
            android:id="@+id/button_pix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pix" />

        <RadioButton
            android:id="@+id/button_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money" />

    </RadioGroup>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_address"
        android:layout_margin="10dp"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/complement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/complement"
        android:layout_margin="10dp"
        android:inputType="text"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_confirmPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:backgroundTint="@color/dark_red"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"/>

</LinearLayout>