<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ThankYouActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/successful"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactUs"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/_return"
        android:backgroundTint="@color/dark_brown"/>

</LinearLayout>