<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity"
        >

        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/container_register"
            style="@style/container_components_register"
            app:layout_constraintTop_toBottomOf="@+id/title_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/edit_name"
            style="@style/edit_text"
            android:hint="@string/edit_name"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_user"
            app:layout_constraintTop_toTopOf="@id/container_register"
            app:layout_constraintStart_toStartOf="@id/container_register"
            app:layout_constraintStart_toEndOf="@id/container_register"
            android:autofillHints="name"
            />

        <EditText
            android:id="@+id/edit_email"
            style="@style/edit_text"
            android:hint="@string/edit_email"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_email"
            app:layout_constraintTop_toBottomOf="@id/edit_name"
            app:layout_constraintStart_toStartOf="@id/container_register"
            app:layout_constraintStart_toEndOf="@id/container_register"
            android:autofillHints="emailAddress"
            />

        <EditText
            android:id="@+id/edit_dateBirth"
            style="@style/edit_text"
            android:hint="@string/edit_dateBirth"
            android:inputType="date"
            android:drawableEnd="@drawable/ic_date"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            app:layout_constraintStart_toStartOf="@id/container_register"
            app:layout_constraintStart_toEndOf="@id/container_register"
            tools:ignore="TextFields"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_celPhone"
            style="@style/edit_text"
            android:hint="@string/edit_celPhone"
            android:inputType="phone"
            android:drawableEnd="@drawable/ic_contact"
            app:layout_constraintTop_toBottomOf="@id/edit_dateBirth"
            app:layout_constraintStart_toStartOf="@id/container_register"
            app:layout_constraintStart_toEndOf="@id/container_register"
            android:autofillHints="no"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/edit_text"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_eye"
            app:layout_constraintTop_toBottomOf="@id/edit_celPhone"
            app:layout_constraintStart_toStartOf="@id/container_register"
            app:layout_constraintStart_toEndOf="@id/container_register"
            android:autofillHints="password"
            />

        <EditText
            android:id="@+id/edit_verifyPassword"
            style="@style/edit_text"
            android:hint="@string/edit_verifyPassword"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_eye"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            app:layout_constraintStart_toStartOf="@id/container_register"
            app:layout_constraintStart_toEndOf="@id/container_register"
            android:autofillHints="password" />


        <Button
            android:id="@+id/button_register"
            style="@style/button"
            android:text="@string/confirm"
            android:backgroundTint="@color/red"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            app:layout_constraintTop_toBottomOf="@id/container_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>