<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ContactActivity">

       <TextView
           android:id="@+id/textView_contact"
           style="@style/text_view"
           android:text="@string/textView_contact"
           android:textColor="@color/black"
           android:textSize="50sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/containerComponents_contact"
            style="@style/container_components_contact"
            app:layout_constraintTop_toBottomOf="@id/textView_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_whatsapp"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/green"
            android:text="@string/whatsapp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/containerComponents_contact"
            app:layout_constraintEnd_toEndOf="@id/containerComponents_contact"
            app:layout_constraintTop_toTopOf="@id/containerComponents_contact"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="@id/containerComponents_contact"
            app:layout_constraintEnd_toEndOf="@id/containerComponents_contact"
            app:layout_constraintTop_toBottomOf="@id/button_whatsapp"/>

        <Button
            android:id="@+id/button_instagram"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/instagram"
            android:backgroundTint="@color/dark_pink"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/containerComponents_contact"
            app:layout_constraintEnd_toEndOf="@id/containerComponents_contact"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/_return"
            android:backgroundTint="@color/dark_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents_contact"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


