<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".LoginActivity"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no"
            />

        <View
            android:id="@+id/containerComponents"
            style="@style/container_components_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            />

        <EditText
            android:id="@+id/edit_email"
            style="@style/edit_text"
            android:hint="@string/email"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents"
            android:autofillHints="emailAddress"
            />

        <EditText
            android:id="@+id/edit_password"
            style="@style/edit_text"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_eye"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            android:autofillHints="password"
            />

        <Button
            android:id="@+id/button_entrar"
            style="@style/button"
            android:backgroundTint="@color/red"
            android:text="@string/button_entrar"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            tools:ignore="UnusedAttribute"
            />

        <TextView
            android:id="@+id/register"
            android:text="@string/cadastre_se"
            style="@style/text_view"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>