<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/containerImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgFood"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/containerImg"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/foodDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toEndOf="@id/containerImg"
        app:layout_constraintTop_toBottomOf="@id/foodName"/>

    <TextView
        android:id="@+id/rCifrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/containerImg"
        app:layout_constraintTop_toBottomOf="@id/foodDescription"/>

    <TextView
        android:id="@+id/foodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/rCifrao"
        app:layout_constraintTop_toBottomOf="@id/foodDescription"/>

    <Button
        android:id="@+id/buttonDecrease"
        android:layout_width="50dp"
        android:layout_height="45dp"
        style="@style/button_increaseDecrease"
        android:text="@string/minus"
        app:layout_constraintTop_toBottomOf="@id/foodDescription"
        app:layout_constraintStart_toEndOf="@id/foodPrice"/>
    
    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/foodDescription"
        app:layout_constraintStart_toEndOf="@id/buttonDecrease"/>

    <Button
        android:id="@+id/buttonIncrease"
        style="@style/button_increaseDecrease"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:text="@string/more"
        app:layout_constraintTop_toBottomOf="@id/foodDescription"
        app:layout_constraintStart_toEndOf="@id/amount"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="12sp"
        android:textStyle="bold"
        android:backgroundTint="@color/dark_red"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toEndOf="@id/foodPrice"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>